--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,6 @@ a {
     margin-left: -42px;
 }
 .button {
-    align-items: center;
     background: #4A72FF;
     color: #fff;
     border: none;
@@ -57,6 +56,11 @@ a {
     border-radius: 10px;
     padding: 12px 24px;
     cursor: pointer;
+}
+.button:hover {
+    background: #99F3FF;
+    color: #202020;
+    transition: all 300ms;
 }
 
 /* info */
@@ -117,6 +121,9 @@ a {
 }
 
 /* promo */
+.promo {
+    padding-bottom: 168px;
+}
 .promo-container {
     display: flex;
 }
@@ -124,7 +131,6 @@ a {
     display: flex;
     margin-top: 91px;
     width: 567px;
-    flex-direction: row;
     flex-wrap: wrap;
 }
 .promo-block__title {
@@ -140,6 +146,10 @@ a {
     width: 189px;
     height: 68px;
     margin-left: 13px;
+}
+.promo-block__button {
+    width: 179px;
+    height: 44px;
 }
 .promo-img {
     display: flex;
@@ -183,4 +193,32 @@ a {
     width: 278px;
     height: 265px;
     z-index: 1;
+}
+
+/* services */
+.services-box {
+    display: flex;
+    flex-direction: column
+}
+.card {
+    margin-top: 182px;
+    background: #FFFFFF;
+    box-shadow: 2px 4px 11px 3px rgba(136, 136, 156, 0.25);
+    border-radius: 10px;
+    width: 400px;
+    height: 319px;
+}
+.card-img {
+    padding-bottom: -60px;
+    padding-left: 62px;
+}
+.card-title {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 24px;
+    font-size: 24px;
+}
+.card-desc {
+    padding-left: 58px;
+    padding-bottom: 12px;
 }
