--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,10 @@ a {
     color: #202020;
     transition: all 300ms;
 }
+.content-box {
+    display: flex;
+    flex-direction: column;
+}
 
 /* info */
 .info {
@@ -196,10 +200,6 @@ a {
 }
 
 /* services */
-.services-box {
-    display: flex;
-    flex-direction: column;
-}
 .cards {
     display: flex;
     flex-direction: row;
@@ -251,3 +251,109 @@ a {
 .card-text2 {
     height: 360px;
 }
+
+/* calculator */
+.calculator {
+    padding-top: 370px;
+}
+.calculator-baza {
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    width: 1240px;
+    height: 1050px;
+    background: #FFFFFF;
+    box-shadow: 2px 4px 11px 4px rgba(136, 136, 156, 0.25);
+    border-radius: 10px;
+    margin-top: 48px;
+}
+.calculator-top {
+    max-width: 1128px;
+    width: 100%;
+    margin: 56px auto 20px auto;
+    display: flex;
+    justify-content: space-between;
+}
+.calculator-title__button {
+    border: 1px solid #C8C8C8;
+    border-radius: 10px;
+    width: 300px;
+    height: 53px;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+.calculator-title {
+    font-size: 24px;
+    margin-bottom: 24px;
+}
+.calculator-desc {
+    font-size: 18px;
+    line-height: 122.02%;
+}
+.calculator-desc2 {
+    font-weight: 600;
+}
+.calculator-ar {
+    background: url(../img/vec2.png) no-repeat center;
+    width: 17px;
+    height: 9px;
+}
+.calculator-card {
+    max-width: 750px;
+    width: 100%;
+    height: 60px;  
+    background: #E5EBFF;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 8px;
+}
+.calculator-card__blue {
+    background: #4A72FF;
+    color: #fff;
+}
+.calculator-bottom1 {
+    margin-top: 48px;
+    margin-left: 40px;
+}
+.calculator-card__quantity {
+    display: flex;
+}
+.calculator-card-text {
+    margin-left: 20px;
+    line-height: 122.02%;
+}
+.card-quest {
+    margin-right: 20px;
+}
+.calculator-card__number {
+    margin-right: 10px;
+    margin-left: 10px;
+}
+.calculator-card__desc2 {
+    margin-left: 100px;
+}
+.calculator-card__quantity2 {
+    margin-left: 56px;
+}
+.calculator-card3 {
+    background: #B6F6FF;
+}
+.calculator-bt {
+    min-width: 497px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 130.02%;
+    text-align: center;
+    margin-top: 48px;
+    margin-left: -400px;
+}
+
+
+
+
+
+
