--- a/css/style.css
+++ b/css/style.css
@@ -318,6 +318,7 @@ a {
 .calculator-bottom1 {
     margin-top: 48px;
     margin-left: 40px;
+    display: flex;
 }
 .calculator-card__quantity {
     display: flex;
@@ -351,8 +352,30 @@ a {
     margin-top: 48px;
     margin-left: -400px;
 }
-
-
+.calculator-bottom__box {
+    max-width: 750px;
+    width: 100%;
+}
+.calculator-bottom__box2 {
+    max-width: 406px;
+    width: 100%;
+    height: 800px;
+    background: #FFFFFF;
+    box-shadow: 2px 4px 11px 4px rgba(136, 136, 156, 0.25);
+    border-radius: 10px;
+    margin-left: 20px;
+}
+.calculator-bottom-title {
+    height: 60px;
+    background: #4A72FF;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+.calculator-bottom-title2 {
+    text-align: center;
+    color: #FFFFFF;
+    font-size: 24px;
+}
 
 
 
